kubernetes/ldap-ui-deployment.yaml
---
# Beta! Test before production use
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-ui
spec:
  selector:
    matchLabels:
      app: ldap-ui
  template:
    metadata:
      labels:
        app: ldap-ui
    spec:
      containers:
      - name: ldap-ui
        image: dnknth/ldap-ui
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
