kubernetes/ldap-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap-ui 
  name: ldap-ui-service
spec:
  ports:
    - port: 80
      name: http
      targetPort: 5000
  selector:
    app: ldap-ui
  type: ClusterIP
